--- a/app/src/app/page.module.scss
+++ b/app/src/app/page.module.scss
@@ -4,6 +4,11 @@
     grid-template-rows: auto 1fr auto;
 }
 
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 .header {
     position: sticky;
     top: 0;
